--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -34,4 +34,18 @@
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     <!--        android:layout_gravity="fill_vertical"-->
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fab_compose"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_create_white_48dp"
+        app:layout_anchor="@id/rvTweets"
+        app:layout_anchorGravity="bottom|right|end"
+        app:backgroundTint="@android:color/holo_blue_light" />
+
+
 </android.support.design.widget.CoordinatorLayout>
