--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -19,15 +19,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/iv_profile_image"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-
                 android:background="@drawable/ic_launcher"
                 android:contentDescription="Profile picture" />
+
+            <TextView
+                android:id="@+id/tv_handle2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                tools:text="\@handle" />
         </LinearLayout>
 
 
@@ -61,18 +67,19 @@
             </LinearLayout>
 
 
-            <TextView
+<!--            <TextView
                 android:id="@+id/tv_handle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                tools:text="\@handle" />
+                tools:text="\@handle" />-->
 
 
             <TextView
                 android:id="@+id/tv_body"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:autoLink="all"
                 android:layout_marginTop="20dp"
                 tools:text="Bacon ipsum dolor amet dolor sausage cillum frankfurter tri-tip. Deserunt eiusmod nulla, proident sausage velit irure hamburger pork loin duis consequat jowl tri-tip prosciutto. Ipsum lorem cow ut ea, pancetta deserunt anim id minim pork loin in boudin. Sed frankfurter ipsum duis ribeye." />
 
