--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -28,12 +28,12 @@
                 android:background="@drawable/ic_launcher"
                 android:contentDescription="Profile picture" />
 
-            <TextView
-                android:id="@+id/tv_handle2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                tools:text="\@handle" />
+            <!--            <TextView
+                            android:id="@+id/tv_handle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            tools:text="\@handle" />-->
         </LinearLayout>
 
 
@@ -42,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:gravity="end"
             android:paddingLeft="20dp"
             android:paddingRight="20dp">
 
@@ -49,12 +50,14 @@
                 android:id="@+id/username_and_timestamp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textStyle="bold"
                     tools:text="User's name" />
 
 
@@ -62,17 +65,22 @@
                     android:id="@+id/tv_timestamp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:textStyle="italic"
                     android:gravity="end"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     tools:text="Time stamp" />
             </LinearLayout>
 
 
-<!--            <TextView
+            <TextView
                 android:id="@+id/tv_handle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                tools:text="\@handle" />-->
+                android:layout_gravity="left"
+                tools:text="\@handle" />
 
 
             <TextView
@@ -80,7 +88,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:autoLink="all"
-                android:layout_marginTop="20dp"
+                android:layout_gravity="end"
+                android:layout_marginTop="10dp"
                 tools:text="Bacon ipsum dolor amet dolor sausage cillum frankfurter tri-tip. Deserunt eiusmod nulla, proident sausage velit irure hamburger pork loin duis consequat jowl tri-tip prosciutto. Ipsum lorem cow ut ea, pancetta deserunt anim id minim pork loin in boudin. Sed frankfurter ipsum duis ribeye." />
 
         </LinearLayout>
