--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -26,7 +26,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/ic_launcher"
-                android:contentDescription="Profile picture" />
+                android:contentDescription="@string/profile_picture" />
 
             <!--            <TextView
                             android:id="@+id/tv_handle"
@@ -79,7 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 tools:text="\@handle" />
 
 
