--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -22,26 +22,20 @@
     </android.support.design.widget.AppBarLayout>
 
 
-    <!--    <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/lvTweets" />-->
-
-
-<!--    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
-    </android.support.v4.widget.SwipeRefreshLayout>-->
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvTweets"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-    <!-- android:layout_gravity="fill_vertical"-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvTweets"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <!-- android:layout_gravity="fill_vertical"-->
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 
     <android.support.design.widget.FloatingActionButton
@@ -54,6 +48,5 @@
         app:backgroundTint="@android:color/holo_blue_light"
         app:layout_anchor="@id/rvTweets"
         app:layout_anchorGravity="bottom|right|end" />
-
 
 </android.support.design.widget.CoordinatorLayout>
